fix: layout spacing

--- a/src/styles/quasar.styl
+++ b/src/styles/quasar.styl
@@ -101,7 +101,6 @@ a.router-link-active {
             .icon {
               width:36px;
               height:36px;
-              margin-left: 2px;
               background-color: black;
               -webkit-mask: url(../assets/logo.svg) no-repeat center;
               }
@@ -127,9 +126,7 @@ a.router-link-active {
                               }
                             }
                             .q-btn-dense.q-btn-round {
-                              padding: 0;
-                              position: absolute;
-                              right: -7px;
+                              margin-right: -15px;
                               }
                             }
       @media only screen and (max-width: 365px) {
